Dashed line, images

--- a/app/scss/components/index/promo.scss
+++ b/app/scss/components/index/promo.scss
@@ -25,7 +25,7 @@
         width: 737px;
         height: 648px;
         position: absolute;
-        background: url('../images/promo-box-dashed.svg');
+        // background: url('../images/promo-box-dashed.svg');
         background-repeat: no-repeat;
         top: -47%;
         right: 62%;
