--- a/app/scss/components/partners/about.scss
+++ b/app/scss/components/partners/about.scss
@@ -56,7 +56,7 @@
           width: 1289px;
           height: 352px;
           position: absolute;
-          background: url('../images/main-right-dash.svg');
+          // background: url('../images/main-right-dash.svg');
           background-repeat: no-repeat;
           z-index: -1;
           top: -112%;
