--- a/app/scss/components/products/catalog.scss
+++ b/app/scss/components/products/catalog.scss
@@ -56,7 +56,7 @@
         display: block;
         content: '';
         background-repeat: no-repeat;
-        background-image: url('../images/product-dashed-bg.svg');
+        // background-image: url('../images/product-dashed-bg.svg');
         width: 100vw;
         height: 163px;
         bottom: 0;
