--- a/app/scss/modules/about.scss
+++ b/app/scss/modules/about.scss
@@ -58,7 +58,7 @@ section {
     &::after {
       position: absolute;
       content: '';
-      background: url('../images/about-rectangle-dashed.svg');
+      // background: url('../images/about-rectangle-dashed.svg');
       background-repeat: no-repeat;
       width: 1043px;
       height: 258px;
