--- a/app/scss/modules/recepts.scss
+++ b/app/scss/modules/recepts.scss
@@ -24,7 +24,7 @@
       width: 1693px;
       height: 716px;
       position: absolute;
-      background: url('../images/recepts-dashed.svg');
+      // background: url('../images/recepts-dashed.svg');
       background-repeat: no-repeat;
       top: 13%;
       left: -17%;
