--- a/app/templates/pages/about.pug
+++ b/app/templates/pages/about.pug
@@ -31,6 +31,7 @@ block content
       .main-partners-box-nav
         +main-partners-box-nav-el(getData('pages/partners/main'))
       .main-about-header
+        canvas.about-dashed(width="100%", height="100%")
         h2.main-about-header-description Мы хотим привить миллионам людей вести здоровый образ жизни, донести до каждого чистоту горного воздуха и воды в наших сырах.
         .image
           img(src="./images/main-about-bg.png")
