--- a/app/templates/modules/recepts.pug
+++ b/app/templates/modules/recepts.pug
@@ -9,6 +9,7 @@ mixin recept-slider(json)
           
 mixin recepts
   section.recepts
+    canvas.recepts-dashed(width="100%", height="100%")
     .content.recepts-box
       .recepts-box-left
         h2 Рецепты <br>с адыгейским сыром
