--- a/app/templates/pages/catalog.pug
+++ b/app/templates/pages/catalog.pug
@@ -10,6 +10,7 @@ block variables
 block content
     +header()
     section.main-catalog
+      canvas.main-catalog-dashed(width="100%", height="100%")
       .content.main-catalog-box
         a.catalog-el(href="./catalog-products.html")
           .catalog-el-img
