--- a/app/templates/pages/index.pug
+++ b/app/templates/pages/index.pug
@@ -19,7 +19,7 @@ mixin main-slider(json)
           +icon('rhombus', 'svg').rhombus-2
           +icon('cheese', 'svg').cheese
       .main-index-box-slider-el-right
-        h2 #{data.title}
+        h2z #{data.title}
         p #{data.text}
         +link('Подробнее', data.link, 'true')
 
@@ -45,6 +45,7 @@ block content
   section.promo.bg-additional.waveSection(data-color="#f6f5f3")
     .content.promo-box
       .promo-box-top
+        canvas.promo-dashed(width="737", height="648")
         .top-left
           img.mouseParalax(src="./images/promo-box-top.svg" alt="Персонажи")
           +icon('promo-box-top-text', 'svg')
