--- a/app/templates/pages/howdo.pug
+++ b/app/templates/pages/howdo.pug
@@ -30,12 +30,12 @@ block content
               li Массовая доля жира и белка
             .total После положительного заключения лаборатории о качестве сырья, молоко проходит нормализацию и пастеризацию
         .image-howdo
-          img(src="./images/main-howdo-bg-1.svg")
+          img.mouseParalax(src="./images/main-howdo-bg-1.svg").
         .number-stage 01
   section.main-howdo-cooking
     .content.main-howdo-cooking-box
       .image-howdo
-        img(src="./images/main-howdo-bg-2.png")
+        img.mouseParalax(src="./images/main-howdo-bg-2.png")
       .description-howdo
         h2 Приготовление сырной массы
         .description-howdo-offset
@@ -48,12 +48,12 @@ block content
         .description-howdo-offset
           .text При производстве сыров «Сулугуни», «Чечил», «Охотничий», «Косичка», «Спагетти» сырная масса подвергается плавлению. Из сырных нитей мастера-сыровары плетут сыры. При производстве сыра «Адыгейский» сырная масса укладывается в формовочные корзины. <br><br> Все сыры отправляются на процедуру соления и охлаждения, а отдельные виды — проходят естественный процесс копчения.
       .image-howdo
-        img(src="./images/main-howdo-bg-3.png")
+        img.mouseParalax(src="./images/main-howdo-bg-3.png")
       .number-stage 03
   section.main-howdo-cool.bg-additional
     .content.main-howdo-cool-box
       .image-howdo
-        img(src="./images/main-howdo-bg-4.png")
+        img.mouseParalax(src="./images/main-howdo-bg-4.png")
       .description-howdo
         h2 Охлаждение и упаковка
         .description-howdo-offset
@@ -66,7 +66,7 @@ block content
         .description-howdo-offset
           .text В автопарке завода 16 корпоративных грузовых машин, предназначенных для доставки готовой продукции до складов и распределительных центров. Во всех автомобилях установлены системы с температурного режима.
       .image-howdo
-        img(src="./images/main-howdo-bg-5.png")
+        img.mouseParalax(src="./images/main-howdo-bg-5.png")
       .number-stage 05
   +about('Перейти в каталог', './catalog.html').bg-additional
   +subscriptionForm().bg-additional
