--- a/app/templates/pages/index.pug
+++ b/app/templates/pages/index.pug
@@ -19,7 +19,7 @@ mixin main-slider(json)
           +icon('rhombus', 'svg').rhombus-2
           +icon('cheese', 'svg').cheese
       .main-index-box-slider-el-right
-        h2z #{data.title}
+        h2 #{data.title}
         p #{data.text}
         +link('Подробнее', data.link, 'true')
 
