--- a/app/templates/pages/news_list.pug
+++ b/app/templates/pages/news_list.pug
@@ -10,6 +10,7 @@ block variables
 block content
   +header()
   section.page-section.bg-additional
+    .text-left Новости
     .content
       .news-header
         h1.page-title Новости и Акции
