--- a/app/templates/pages/partners.pug
+++ b/app/templates/pages/partners.pug
@@ -50,7 +50,7 @@ block content
             +icon('prevslogo', 'svg').scrollRotate
           .prevs-box-row
             +prevs-row-el(getData('pages/partners/prevs'))
-            .prevs-box-row-el
+            .prevs-box-row-el.mouseParalax
               +icon('pack', 'svg')(class="pack")
     +askQuestionForm().bg-additional
     +about('О нас', './about.html').bg-additional
