--- a/app/scss/components/news/detail.scss
+++ b/app/scss/components/news/detail.scss
@@ -26,7 +26,7 @@
       &:before {
         width: 130vw;
         left: 50%;
-        height: calc(100% + 30px);
+        height: calc(100% + -50px);
         transform: translateX(-50%);
       }
       img {
@@ -36,6 +36,7 @@
   }
   &-box {
     position: relative;
+    
     @include screen("950", "max") {
       padding-bottom: 70px;
     }
@@ -50,9 +51,14 @@
       height: 63px;
       background: url(../images/detail-line-dashed.svg);
       background-size: 100% 100%;
+      
+      @include screen("950", "max") {
+        display: none;
+      }
     }
   }
   &-date {
+    font-family: 'CeraPro';
     margin-top: 30px;
     font-style: normal;
     font-weight: normal;
@@ -73,7 +79,7 @@
     padding-bottom: 130px;
 
     h4 {
-      font-family: PFRegalTextPro;
+      font-family: 'PFRegalTextPro';
       font-style: normal;
       font-weight: bold;
       font-size: 25px;
@@ -83,6 +89,7 @@
       margin-top: 60px;
     }
     p {
+      font-family: 'CeraPro';
       font-style: normal;
       font-weight: normal;
       font-size: 20px;
@@ -121,20 +128,6 @@
       }
       @include screen("xs", "max") {
         transform: translateX(20px) !important;
-      }
-    }
-    &-item {
-      width: 62px;
-      height: 62px;
-      margin: 10px 0;
-      border-radius: 50%;
-      background: #ffffff;
-      border: 1px solid #312930;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      @include screen("950", "max") {
-        margin: 0 10px;
       }
     }
   }
