--- a/app/templates/pages/news_detail.pug
+++ b/app/templates/pages/news_detail.pug
@@ -7,16 +7,15 @@ include ../modules/header.pug
 block variables
   -var pageTitle='Новость детально'
 
-  mixin content-detail(json)
-    each data in json
-      h4 #{data.title}
-      each text in data.texts
-        p #{text}
-  mixin news-detail-social-links(json)
-    each data in json
-      a.newsDetail-social-item(href=data.link)
-        +icon(data.ico, 'svg')
-
+mixin content-detail(json)
+  each data in json
+    h4 #{data.title}
+    each text in data.texts
+      p #{text}
+mixin news-detail-social-links(json)
+  each data in json
+    a.social-link(href=data.link)
+      +icon(data.ico, 'svg')
 
 block content
   +header()
@@ -40,20 +39,20 @@ block content
       .news-header
         h2.page-title Другие новости и акции
       .news-row
-        a.news-item.small-item(href="news_detail.html")
+        a.news-item.small-item(href="./news_detail.html")
           .news-item-image
           .news-content
             .news-type Новость
             .news-time 25.05. 
               span 2019
             .news-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
-        a.news-item.small-item(href="news_detail.html")
+        a.news-item.small-item(href="./news_detail.html")
           .news-content
             .news-type Новость
             .news-time 25.05. 
               span 2019
             .news-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
-        a.news-item.small-item(href="news_detail.html")
+        a.news-item.small-item(href="./news_detail.html")
           .news-content
             .news-type Новость
             .news-time 25.05. 
