--- a/app/templates/modules/forms.pug
+++ b/app/templates/modules/forms.pug
@@ -37,7 +37,14 @@ mixin askQuestionForm
           .contact-box-form-el
             +textarea('question', '29', '10', 'Ваш вопрос', 'необязательно')
           .contact-box-form-el
-            +checkbox('agree', 'agree', 'Согласие на обработку персональных данных в соответствии с политикой конфиденциальности')
+            .main-checkbox
+              input(type="checkbox" id='agree' name='agree')
+              label(for='agree' class="main-checkbox-name")
+                +icon('checkbox', 'svg').state-default
+                +icon('checkbox-hover', 'svg').state-hover
+                +icon('checkbox-checked', 'svg').state-checked
+                p Согласие на обработку персональных данных в соответствии с 
+                  a(href="./politics.html") политикой конфиденциальности
           .contact-box-form-el
             +buttonSubmit('Отправить')
         .contact-box-success
@@ -54,11 +61,18 @@ mixin contactUsForm
           .contact-box-form-el
             +inputField('text', 'name', 'Ваше имя')
             +inputField('text', 'phone', 'Ваш телефон', null)
-            +inputField('email', 'email', 'Ваша почта для ответа', false)
+            +inputField('text', 'email', 'Ваша почта для ответа', false)
           .contact-box-form-el
             +textarea('question', '29', '10', 'Ваш вопрос', 'необязательно')
           .contact-box-form-el
-            +checkbox('agree', 'agree', 'Согласие на обработку персональных данных в соответствии с политикой конфиденциальности')
+            .main-checkbox
+              input(type="checkbox" id='agree' name='agree')
+              label(for='agree' class="main-checkbox-name")
+                +icon('checkbox', 'svg').state-default
+                +icon('checkbox-hover', 'svg').state-hover
+                +icon('checkbox-checked', 'svg').state-checked
+                p Согласие на обработку персональных данных в соответствии с 
+                  a(href="./politics.html") политикой конфиденциальности
           .contact-box-form-el
             +buttonSubmit('Задать вопрос')
         .contact-box-success
