--- a/app/templates/pages/recept_detail.pug
+++ b/app/templates/pages/recept_detail.pug
@@ -99,8 +99,8 @@ block content
             .right
               a.print-page(href="#" onclick="window.print();") Распечатать
                 +icon('printer', 'svg')
-        .product-wrapper-content
-            .group-product
+        .product-wrapper-content.fixed-base
+            .group-product.fixed-item
               span
               .product-image
                 img(src="./images/img-products-2-min.png")
