--- a/app/scss/components/recepts/detail.scss
+++ b/app/scss/components/recepts/detail.scss
@@ -153,6 +153,16 @@
           .recept-social-links {
             display: flex;
             margin-left: 30px;
+            opacity: 0;
+            transition: all 0.3s;
+            position: absolute;
+            pointer-events: none;
+
+            &.active {
+              opacity: 1;
+              pointer-events: all;
+              transform: translateX(50%);
+            }
 
             @include screen('sm', 'max') {
               display: none;
