--- a/app/scss/components/recepts/detail.scss
+++ b/app/scss/components/recepts/detail.scss
@@ -18,23 +18,21 @@
         width: 30%;
         position: relative;
 
-        @include screen('lg', 'max') {
-
-        }
-
         @include screen('md', 'max') {
           margin: 0 auto;
-          margin-bottom: 150px;
           width: 80%;
-          margin-top: 100px;
+          margin-bottom: 120px;
         }
         
         .group-product {
           height: 100%;
-          padding-bottom: 120px;
 
           @include screen('lg', 'max') {
-            padding-bottom: 60px;
+            margin-bottom: 60px;
+          }
+
+          @include screen('md', 'max') {
+            margin-bottom: 0px;
           }
         }
 
@@ -43,7 +41,7 @@
           height: 360px;
           background-image: url('../images/bg-recept-product.svg');
           background-repeat: no-repeat;
-          background-position: center left;
+          background-position: center;
           background-size: 100%;
           content: '';
           display: block;
@@ -52,14 +50,13 @@
           z-index: 1;
 
           @include screen('md', 'max') {
-            width: 80%;
-            height: 80%;
-            margin-left: 20px;
+            width: 100%;
+            height: 100%;
+            background-size: 70%;
           }
 
           @include screen('xs', 'max') {
-            width: 100%;
-            height: 100%;
+            background-size: 90%;
           }
         }
       }
@@ -122,6 +119,12 @@
         top: 0%;
         z-index: 10;
         left: 5%;
+
+        @include screen('xs', 'max') {
+          i {
+            font-size: 6px;
+          }
+        }
       }
     }
     
