[UPDATE/DEPLOY] Страница рецепта, ссылка на фикс элемент, обновление docs

--- a/app/scss/components/recepts/detail.scss
+++ b/app/scss/components/recepts/detail.scss
@@ -27,6 +27,12 @@
         .group-product {
           height: 100%;
 
+          &:hover {
+            span {
+              filter: sepia(80%);
+            }
+          }
+
           @include screen('lg', 'max') {
             margin-bottom: 60px;
           }
