--- a/app/templates/pages/recept_detail.pug
+++ b/app/templates/pages/recept_detail.pug
@@ -100,7 +100,7 @@ block content
               a.print-page(href="#" onclick="window.print();") Распечатать
                 +icon('printer', 'svg')
         .product-wrapper-content.fixed-base
-            .group-product.fixed-item
+            a.group-product.fixed-item(href="./product.html")
               span
               .product-image
                 img(src="./images/img-products-2-min.png")
