--- a/app/templates/modules/footer.pug
+++ b/app/templates/modules/footer.pug
@@ -34,7 +34,7 @@ mixin footer()
           .footer-box-nav-tel-group
             .footer-box-nav-tel-group-desc Служба поддержки потребителей
             a.footer-box-nav-tel-group-number(href="tel:88002509393") 8 800 250-93-93
-          +link('Задать вопрос', '#')
+          +link('Задать вопрос', '#')#controlModal
         .footer-box-nav-adderlinks
           a(href="#") Политика конфиденциальности
           a(href="#") Положение о персональных данных
