--- a/app/templates/modules/header.pug
+++ b/app/templates/modules/header.pug
@@ -1,3 +1,5 @@
+include ../modules/forms.pug
+
 mixin header-box-nav-el(json)
   each data in json
     .header-box-nav-el
@@ -34,7 +36,7 @@ mixin header
           .left
             .left-desc Служба поддержки потребителей
             a.left-number(href="tel:88002509393") 8 800 250-93-93
-            +link('Задать вопрос', '#')
+            +link('Задать вопрос', '#')#controlModal
           .right
             .right-desc Мы в социальных сетях
             .right-group
